--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ShopNSplit</string>
     <string name="register">Register</string>
+    <string name="txt_search">Searching</string>
+    <string name="txt_done">Done</string>
 </resources>
