--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">ShopNSplit</string>
     <string name="register">Register</string>
-    <string name="txt_search">Searching</string>
+    <string name="action_settings">Settings</string>
     <string name="txt_done">Done</string>
+    <string name="txt_search">Search</string>
+    <string name="click_to_select_contacts">Click to Select Contacts</string>
+    <string name="selected_contacts">Selected Contacts:</string>
 </resources>
